--- a/resources/.qrc
+++ b/resources/.qrc
@@ -1,7 +1,5 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
-    <file alias="file.ico">file.ico</file>
-    <file alias="entry.ico">entry.ico</file>
-    <file alias="help.ico">help.ico</file>
+    <file alias="entry">entry.png</file>
 </qresource>
 </RCC>
