--- a/resources/.qrc
+++ b/resources/.qrc
@@ -1,5 +1,8 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
     <file alias="entry">entry.png</file>
+    <file alias="edit">edit.png</file>
+    <file alias="search">search.png</file>
+
 </qresource>
 </RCC>
